--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div>
         <div class="bonzi-buddy" id="bonzi">
             <img src="BonziBUDDY.webp" alt="BonziBUDDY" width="30" height="30" class="img-bonzi-buddy" id="staticImage">
-            <img src="bonziBuddy.gif" alt="BonziBUDDY" width="30" height="30" class="img-bonzi-buddy" id="bonziGif">
+            <img src="BonziBuddy.gif" alt="BonziBUDDY" width="30" height="30" class="img-bonzi-buddy" id="bonziGif">
             <audio id="bonziAudio" src="mamaco.mp3"></audio>
         </div>
        
