--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       </header>
       <section class="section">
         <h3 class="section-title">
-          Na <span class="highlight-text">Feira Tecnológica</span>, você:
+          Na <span class="highlight-text">Feira Tecnológica</span>, você irá aprender:
         </h3>
         <ul class="list">
           <li class="list-item"><i>Futuro do Trabalho</i> com IA.</li>
